[package]
name = "fossil"
version = "0.1.0"
edition = "2024"
description = "Volume manager service for Glenda Microkernel"

[dependencies]
libglenda-rs = { path = "../../lib/libglenda-rs", features = ["rt-service"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
